# SnowVault-Enterprise-Data-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: data_quality_report.yml  dbt_ci_cd.yml  observability_integration.yml  terraform_ci_cd.yml
airflow/dags/: cdc_streaming_dag.py  data_quality_dag.py  (+3 more)
analyses/: pipeline_sla_monitor.sql  vault_health_check.sql
dagster/: __init__.py  dbt_project.py  definitions.py  jobs.py  resources.py  schedules.py  sensors.py
docs/: architecture.md  ci_cd_guide.md  data_processing_walkthrough.md  data_vault_guide.md  infrastructure_setup.md  multi_cloud_strategy.md  onboarding.md  security_governance.md
runbooks/: disaster_recovery.md
seeds/: _seeds__schema.yml  country_codes.csv  order_status_mapping.csv  payment_methods.csv  product_categories.csv
snapshots/: snap_sat_customer_details.sql
snowflake/: 00_rbac_setup.sql  01_databases_and_schemas.sql  02_file_formats_and_stages.sql  03_metadata_and_control_tables.sql  04_dynamic_schema_procedure.sql  05_streams_and_tasks.sql  06_data_masking_and_tags.sql  07_replication_and_failover.sql  08_resource_monitors.sql  09_network_policies.sql  10_backup_and_retention.sql  11_multi_cloud_ingestion.sql  12_semantic_views.sql  13_row_access_and_classification.sql  14_enhanced_failover_runbooks.sql  15_observability_integration.sql  16_dynamic_tables.sql  17_iceberg_tables.sql  18_cortex_ai_and_snowpark.sql  19_data_products.sql  nifi_cdc_flow_template.json
(+107 files in other folders)
