[project]
name = "data-vault-2-0-platform"
version = "1.0.0"
description = "Production-Grade Snowflake Data Platform with Data Vault 2.0, Multi-Cloud, and dbt"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "dbt-snowflake>=1.11.0",
    "snowflake-snowpark-python>=1.22.0",
    "apache-airflow>=2.10.0",
    "apache-airflow-providers-snowflake>=6.0.0",
    "apache-airflow-providers-common-sql>=1.14.0",
    "sqlfluff>=3.2.0",
    "sqlfluff-templater-dbt>=3.2.0",
    "pre-commit>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
observability = [
    "prometheus-client>=0.21.0",
    "datadog>=0.50.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.sqlfluff.core]
dialect = "snowflake"
templater = "dbt"
max_line_length = 120

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4
